refactor: harden Java benchmark semantics and difficulty progression