@@ -1,9 +1,7 @@
 package io.xguardian.javabench.cases.level1;
 
-import java.util.List;
-
 public class Case000023 {
     public Object run(String input) throws Exception {
-        return Runtime.getRuntime().exec("sh -c echo " + input);
+        return Runtime.getRuntime().exec(new String[] {"sh", "-c", "echo " + input});
     }
 }
