@@ -1,11 +1,11 @@
 package io.xguardian.javabench.cases.level5;
 
-import java.util.List;
+import java.util.function.Function;
 
 public class Case000039 {
     public Object run(String input) throws Exception {
-        java.util.function.Function<String,String> relay = x -> x;
+        Function<String, String> relay = value -> value;
         String value = relay.apply(input);
-        return Runtime.getRuntime().exec("sh -c echo " + value);
+        return Runtime.getRuntime().exec(new String[] {"sh", "-c", "echo " + value});
     }
 }
